--- a/roadMap/functionsss/func01.html
+++ b/roadMap/functionsss/func01.html
@@ -7,19 +7,11 @@
 </head>
 <body>
     <script>
-      
-      function allAdress(a,b, ...c){
-                console.log(a,b, c.join(''))
-      }
 
-
-      allAdress(
-        'nova',
-        'v',
-        'd',
-        'ff',
-        'gg'
-      )
+function g(){
+    console.log('hello world')
+}
+g()
     </script>
 </body>
 </html>
