--- a/roadMap/functionsss/func02.html
+++ b/roadMap/functionsss/func02.html
@@ -7,19 +7,15 @@
 </head>
 <body>
     <script>
-      
-      function allAdress(a,b, ...c){
-                console.log(a,b, c.join(''))
-      }
+
+function calc(a,b){
+    return a + b
+}
+let res = calc(2,3)
+
+console.log(res)
 
 
-      allAdress(
-        'nova',
-        'v',
-        'd',
-        'ff',
-        'gg'
-      )
     </script>
 </body>
 </html>
