--- a/roadMap/functionsss/func03.html
+++ b/roadMap/functionsss/func03.html
@@ -7,19 +7,20 @@
 </head>
 <body>
     <script>
-      
-      function allAdress(a,b, ...c){
-                console.log(a,b, c.join(''))
-      }
+function tired(a,b, ...c){
+    console.log(a,b, c.join(''))
+}
 
 
-      allAdress(
-        'nova',
-        'v',
-        'd',
-        'ff',
-        'gg'
-      )
+tired(
+    'city',
+    'adress',
+    ' place ',
+    ' town ',
+    ' between'
+)
+
+
     </script>
 </body>
 </html>
