--- a/roadMap/erros/er01.html
+++ b/roadMap/erros/er01.html
@@ -6,15 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="demo"></p>
     <script>
 
-
-try {
-  adddlert("Welcome guest!");
+try{
+    console.log('welcome')
 }
-catch(err) {
-  document.getElementById("demo").innerHTML = err.message;
+catch(err){
+err.message
 }
 
     </script>
