--- a/roadMap/erros/er01.html
+++ b/roadMap/erros/er01.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+   
     <script>
 
 try{
-    console.log('welcome')
+    adddlert('welcome')
 }
 catch(err){
-err.message
+    console.log(err.message)
 }
-
     </script>
 </body>
 </html>
