--- a/tstBarb.html
+++ b/tstBarb.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <script>
-      
-      function allAdress(a,b, ...c){
-                console.log(a,b, c.join(''))
-      }
+  <script>
 
 
-      allAdress(
-        'nova',
-        'v',
-        'd',
-        'ff',
-        'gg'
-      )
-    </script>
+function num (){
+try {
+  codigo
+} catch (error) {
+  console.log(`o codigo que esta aparecendo é : \n \n ${error}`)
+}
+
+}
+num( )
+
+
+
+
+
+  </script>
 </body>
 </html>
