--- a/tstBarb.html
+++ b/tstBarb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +7,14 @@
 </head>
 <body>
   <script>
+let num = 0 
+
+let b = Boolean(num)
 
 
-try {
-  let num = 10 
-  let res = num / 0
-  console.log(res)
-} catch (ir) {
-  console.log('ocorreu um erro :' + ir.message)
-}finally{
-  console.log('esse bloco sempre será executado')
-}
-console.log('fim do processo')
+alert(typeof(b))
+
+
 
 
 
