--- a/tstBarb.html
+++ b/tstBarb.html
@@ -7,16 +7,17 @@
 </head>
 <body>
   <script>
-let num = 0 
-
-let b = Boolean(num)
 
 
-alert(typeof(b))
+let lastWeend = true
 
+let hour = 10
 
 
 
+if ( hour < 10 || hour > 18 || lastWeend ){
+  console.log('fechado')
+}
 
   </script>
 </body>
