--- a/roadMap-from-Developer/condiçoesBranching/cond01.html
+++ b/roadMap-from-Developer/condiçoesBranching/cond01.html
@@ -7,8 +7,18 @@
 </head>
 <body>
     <script>
+let acessAllowed;
 
-let res = condition ? value1 : value2
+let age = prompt('whats your year old??')
+
+if(age > 18){
+   acessAllowed = true
+}else {
+   acessAllowed = false 
+}
+
+alert (acessAllowed)
+
 
 
     </script>
