--- a/roadMap-from-Developer/operadores-logicos/op05.html
+++ b/roadMap-from-Developer/operadores-logicos/op05.html
@@ -7,16 +7,15 @@
 </head>
 <body>
     <script>
+// em baixo as possiveis combinaçoes logicas 
+
+alert(true || true); // = true
+alert(false || true); // = true
+alert(true || false); // = true
+alert(false || false); // = false
 
 
-let hour = 12 
 
-let lastWeekend = true
-
-
-if( hour < 6 || hour > 12 || lastWeekend){
-    console.log('this is lastWeekend')
-}
 
     </script>
 </body>
