--- a/roadMap-from-Developer/operadores-logicos/op06.html
+++ b/roadMap-from-Developer/operadores-logicos/op06.html
@@ -9,14 +9,12 @@
     <script>
 
 
-let hour = 12 
 
-let lastWeekend = true
-
-
-if( hour < 6 || hour > 12 || lastWeekend){
-    console.log('this is lastWeekend')
+if(1 || 0){// works just like if (true || false)
+    console.log('truthy')
 }
+
+
 
     </script>
 </body>
