--- a/roadMap-from-Developer/operadores-logicos/op07.html
+++ b/roadMap-from-Developer/operadores-logicos/op07.html
@@ -8,6 +8,17 @@
 <body>
     <script>
 
+alert( true && true );   // true
+alert( false && true );  // false
+alert( true && false );  // false
+alert( false && false ); // false
+
+
+
+
+
+
+
     </script>
 </body>
 </html>
