--- a/roadMap-from-Developer/nullishoperador/null02.html
+++ b/roadMap-from-Developer/nullishoperador/null02.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <script>
-        
+        let right = 0 
+
+        console.log (right || 100)
+        console.log (right ?? 100)
     </script>
 </body>
 </html>
