--- a/roadMap-from-Developer/nullishoperador/null02.html
+++ b/roadMap-from-Developer/nullishoperador/null02.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <script>
-       
+       let n = null 
+       let b = true 
+       let c = 'random'
+
+       if (n == true || b == true ||c == String){
+        console.log('uma dessas consiçoes são verdadeiras')
+       }
+
+
     </script>
 </body>
 </html>
