--- a/roadMap-from-Developer/nullishoperador/null02.html
+++ b/roadMap-from-Developer/nullishoperador/null02.html
@@ -11,8 +11,10 @@
        let b = true 
        let c = 'random'
 
-       if (n == true || b == true ||c == String){
+       if (n === true || b === false ||c == Number){
         console.log('uma dessas consiçoes são verdadeiras')
+       }else {
+        console.log('nenhuma das opçoes são verdadeiras ')
        }
 
 
