--- a/roadMap-from-Developer/loopings/loo01.html
+++ b/roadMap-from-Developer/loopings/loo01.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+let a = 1 
+let b = 2 
+let c = true  
+let d = 'anonimous'
+
+if(a === Number || a === String || a > 10 ){
+console.log('this number not a string ')
+}
+
+
+
+
+
+    </script>
 </body>
 </html>
