--- a/roadMap-from-Developer/nullishoperador/null03.html
+++ b/roadMap-from-Developer/nullishoperador/null03.html
@@ -6,18 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h3> começando com o while </h3>
     <script>
+        let nul1 = null 
+let nul2 = null 
+let a = ''
 
-let i = 1 
-while( i < 3){
-    alert(i)
-    i++
+if (a == null || a == Number || a == string ){
+    console.log('verdadeiro')
 }
-
-// vai incrementar ate o 3 
-
-
 
     </script>
 </body>
