--- a/roadMap-from-Developer/functionss/func03.html
+++ b/roadMap-from-Developer/functionss/func03.html
@@ -17,7 +17,7 @@ let message = 'hello ' + myUsername
 console.log(message)
 }
 
-console.log(myUsername)// denne antes tha função ser chamada 
+console.log(myUsername)// denner antes tha função ser chamada 
 
 helloo()
 
