--- a/roadMap-from-Developer/functionss/func03.html
+++ b/roadMap-from-Developer/functionss/func03.html
@@ -6,14 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>parametro simples </h3>
     <script>
-        function gg(a,b){
 
-let res = a + b
-        }
 
-console.log(10,20)
-        
+function gg(a,b) {
+
+    console.log(a + b)
+
+  }
+
+
+  gg(10,20)
+
+
+
+
+
     </script>
 </body>
 </html>
