--- a/roadMap-from-Developer/functionss/func04.html
+++ b/roadMap-from-Developer/functionss/func04.html
@@ -3,23 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>func</title>
+    <title>Document</title>
 </head>
 <body>
-    <h3> function em parametro simples </h3>
     <script>
 
 
-function gg(a,b) {
+function locatioon(a,b){
+    console.log(a  + ':' +b)
+}
 
-    console.log(a + b)
-
-  }
-
-
-  gg(10,20)
-
-
+locatioon(Denner, Nemeth)
 
 
 
