--- a/roadMap-from-Developer/functionss/func07.html
+++ b/roadMap-from-Developer/functionss/func07.html
@@ -6,19 +6,26 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>funçoes parametros com condiçoes p2</h3>
     <script>
 
-function qlq(a){
+function showMe(a) { 
 
-    if( a === undefined){
-        a = 'esta correto'
-    }else{
-        a ='não esta correto '
-    }
-    console.log(a)
+if( a === undefined){
+
+    a = 'Está correto'
+
+}else{
+
+    a = ' não está pois o parametro ja foi definido pelo usuario '
+
 }
+console.log(a)
 
-qlq(123)
+ }
+
+ showMe(1)
+
     </script>
 </body>
 </html>
