--- a/tstBarb.html
+++ b/tstBarb.html
@@ -6,6 +6,23 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <script>
+
+function a (k){
+  if (k == Number){
+    return false
+  }else {
+    return true
+  }
+  console.log(k)
+}
+
+
+
+a(10)
+
+
+
+  </script>
 </body>
 </html>
