--- a/tstBarb.html
+++ b/tstBarb.html
@@ -6,6 +6,28 @@
   <title>Document</title>
 </head>
 <body>
+  <script>
+
+
+function b (k){
+  if (k == Number){
+    return console.log('isso e um numero')
+  }else{
+    return console.log(' não é um numero ')
+  }
   
+  console.log(b(4))
+  
+}
+
+b()
+
+
+
+
+
+
+
+  </script>
 </body>
 </html>
