--- a/tstBarb.html
+++ b/tstBarb.html
@@ -10,17 +10,14 @@
 
 
 function b (k){
-  if (k == Number){
-    return console.log('isso e um numero')
-  }else{
-    return console.log(' não é um numero ')
-  }
-  
-  console.log(b(4))
+  if (k === Number)
+    return 'isso e um numero'
+  else
+    return 'não é um numero '
   
 }
 
-b()
+console.log(b(4))
 
 
 
