--- a/roadMap-from-Developer/functionss/func14.html
+++ b/roadMap-from-Developer/functionss/func14.html
@@ -8,13 +8,18 @@
 <body>
     <script>
 
-function soma(n1,n2){
+function soma(n1,n2) { 
+let res 
+res = n1 + n2
+return res
+
+
+ }
+
+soma (2,3)
 
 
 
-
-
-}
 
     </script>
 </body>
