--- a/roadMap-from-Developer/functionss/func13.html
+++ b/roadMap-from-Developer/functionss/func13.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <script>
+        
+function soma(n1,n2) {
+console.log(n1+n2)
 
-function soma(n1,n2){
+  }
+
+
+soma(1,2)
 
 
 
-
-
-}
 
     </script>
 </body>
