--- a/tstBarb.html
+++ b/tstBarb.html
@@ -9,18 +9,9 @@
   <script>
 
 
-function b (k){
-  if (k === Number)
-    return 'isso e um numero'
-  else
-    return 'não é um numero '
+function askMe(question,yes,no){
   
 }
-
-console.log(b(4))
-
-
-
 
 
 
