--- a/tstBarb.html
+++ b/tstBarb.html
@@ -15,13 +15,18 @@
 let msg = window.document.getElementById('msg')
 
 
-
-function hi(...valores){
-  return valores.length
+let f = function (n1,n2){ // função anonima com variavel
+  return n1 + n2
 }
 
 
-msg.innerHTML = hi(1,2,3,5,6,7,8,9,0)
+
+msg.innerHTML = f(2,3) // 5
+
+
+
+
+
   </script>
 </body>
 </html>
