--- a/tst.html
+++ b/tst.html
@@ -8,14 +8,15 @@
 <body>
     <script>
 
-function soma(n1,n2){
+function aa() {
+    alert('hi')
+  }
 
 
+  let func = aa
 
-
-
-}
-
+  aa()
+ func()
     </script>
 </body>
 </html>
