--- a/tst.html
+++ b/tst.html
@@ -8,15 +8,18 @@
 <body>
     <script>
 
-function aa() {
-    alert('hi')
+
+function soma1(a1,a2) {
+    return a1+a2
   }
 
+  
 
-  let func = aa
+console.log(soma1(23,3))// 
 
-  aa()
- func()
+
+
+
     </script>
 </body>
 </html>
