--- a/tst.html
+++ b/tst.html
@@ -13,7 +13,9 @@ function soma1(a1,a2) {
     return a1+a2
   }
 
-  
+let somas = soma1
+
+console.log(somas(11,3))//
 
 console.log(soma1(23,3))// 
 
