--- a/tst.html
+++ b/tst.html
@@ -15,9 +15,9 @@ function soma1(a1,a2) {
 
 let somas = soma1
 
-console.log(somas(11,3))//
+console.log(somas(11,3))//14
 
-console.log(soma1(23,3))// 
+console.log(soma1(23,3))// 26
 
 
 
