--- a/tstBarb.html
+++ b/tstBarb.html
@@ -4,25 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-
-  </style>
 </head>
 <body>
-  <div id="msg"></div>
   <script>
 
-let msg = window.document.getElementById('msg')
+let msg = ['html','css','java']
 
 
-let f = function (n1,n2){ // função anonima com variavel
-  return n1 + n2
-}
+msg.map((el,i)=>{
 
 
 
-msg.innerHTML = f(2,3) // 5
+  console.log('curso' + el + 'posição do curso no array:' + i)
 
+
+
+
+
+})
 
 
 
