--- a/roadMap-from-Developer/map-array/map02.html
+++ b/roadMap-from-Developer/map-array/map02.html
@@ -10,22 +10,24 @@
 <script>
 
 
-let cursos  = ['java','css','css']
+let cursos = ['html','css','java']
 
+let c = cursos.map((el,i)=>{
 
-cursos.map((el,i)=>{
-
-console.log('o curso é:' + el + 'e a posição dele é '+ i)
+return c // aqui vamos retornar os elementos 
 
 
 
 })
 
 
-
-
-
+console.log(c)
 
 </script>
+
+
+
+
+
 </body>
 </html>
