--- a/tstBarb.html
+++ b/tstBarb.html
@@ -8,20 +8,7 @@
 <body>
   <script>
 
-let msg = ['html','css','java']
-
-
-msg.map((el,i)=>{
-
-
-
-  console.log('curso' + el + 'posição do curso no array:' + i)
-
-
-
-
-
-})
+function 
 
 
 
