--- a/tstBarb.html
+++ b/tstBarb.html
@@ -8,7 +8,30 @@
 <body>
   <script>
 
-function 
+
+function aluno(nome,nota){
+  this.nome=nome
+  this.nota=nota
+
+  this.dados_anonimous=function(){
+     setTimeout(() => {  //usando a correção com arrowFunction para usar os parametros nome e nota 
+                         // se caso nao usar arrowFunction vai sair como undefined  
+      this.nome=nome
+      this.nota=nota
+      console.log(this.nome)
+      console.log(this.nota)
+     }, 2000);
+  }
+  
+}
+
+
+let aluno01 = new aluno('Denner', 9)
+
+
+aluno.dados_anonimous()
+
+
 
 
 
