--- a/tst.html
+++ b/tst.html
@@ -8,17 +8,21 @@
 <body>
     <script>
 
+let aleatorios = [12,13,144,2156,6,8,0,12,18,22,34,54,30]
 
-function soma1(a1,a2) {
-    return a1+a2
-  }
 
-let somas = soma1
 
-console.log(somas(11,3))//14
 
-console.log(soma1(23,3))// 26
+let maior=aleatorios.filter((a)=>{
 
+
+if(a > 20)
+return a
+
+
+})
+
+console.log(maior)
 
 
 
