--- a/tstBarb.html
+++ b/tstBarb.html
@@ -7,18 +7,18 @@
 </head>
 <body>
   <script>
+
 let nome  = {
   name:'denner',
   age:2,
 
-  hiYou(){
-    alert(this.age)
+  hiG(){
+    alert('hello')
   }
 }
 
 
-nome.hiYou()
-
+nome.hiG()
 
   </script>
 </body>
