--- a/roadMap-from-Developer/objetos-basic/obj-basic03.html
+++ b/roadMap-from-Developer/objetos-basic/obj-basic03.html
@@ -12,9 +12,9 @@
 
 let user = {};
 
-user=['likes dogs'] = true; 
+user["likes the dogs"] = true; 
 
-alert(user['likes dogs']);
+alert(user["likes the dogs"]);
 
     
 </script>
