--- a/tstBarb.html
+++ b/tstBarb.html
@@ -8,17 +8,15 @@
 <body>
   <script>
 
-let nome  = {
-  name:'denner',
-  age:2,
+let user  = { 
+name:'denner',
+age:2
 
-  hiG(){
-    alert('hello')
-  }
-}
+};
 
+let key = prompt('do you worked today ?', 'name')
 
-nome.hiG()
+alert(user[key])
 
   </script>
 </body>
