--- a/tstBarb.html
+++ b/tstBarb.html
@@ -16,7 +16,9 @@ age:2
 
 let key = prompt('do you worked today ?', 'name')
 
-alert(user[key])
+console.log((user[key]))   // denner 
+
+//
 
   </script>
 </body>
