--- a/roadMap-from-Developer/objetos-basic/obj_basic11.html
+++ b/roadMap-from-Developer/objetos-basic/obj_basic11.html
@@ -7,22 +7,15 @@
 </head>
 <body>
     <script>
- 
-
- let num = ' global'
 
 
- function globoN() {
+const num = {
+    name:'jhon'
+}
 
-    num = 'lua'
+num.name = 'paul'
 
-
-   }
-
-globoN()
-
-console.log(num) // lua 
-
+console.log(num.name) // paul, 
 
     </script>
 </body>
