--- a/tst.html
+++ b/tst.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <script>
-let cds = {
-    country1:'USA',
-    country2:'Brazil',
-    country3:'CANADA',
-    country4:'MEXICO'
+
+let num = {
+user:'res',
+user1:'res1'
+
 }
 
+let key = 'res'
 
-for(let c in cds){
-    console.log(c) //
-}
+console.log( key in num )
+
     </script>
 </body>
 </html>
