--- a/tstBarb.html
+++ b/tstBarb.html
@@ -8,15 +8,17 @@
 <body>
   <script>
 
-let user  = { 
-name:'denner',
-age:2
 
-};
+let nome  ={
 
-let key = prompt('do you worked today ?', 'name')
+name:'denner'
 
-console.log((user[key]))   // denner 
+}
+
+nome=null 
+
+console.log(nome)
+
 
   </script>
 </body>
