--- a/tstBarb.html
+++ b/tstBarb.html
@@ -7,19 +7,20 @@
 </head>
 <body>
   <script>
-
-
-let nome  ={
-
-name:'denner'
-
+let name = {
+  name:'red',
+  name1:'green'
 }
 
-nome=null 
+let num = {
+  o1:1,
+  o2:2
+}
 
-console.log(nome)
+let returnOsnumbers = Object.assign(name, num)
 
-
+console.log(name)
+console.log(num)
   </script>
 </body>
 </html>
