--- a/txt.html
+++ b/txt.html
@@ -12,13 +12,13 @@
 
 
 // https://androidtunado.com.br/duolingo-premium-apk/  duolingo
-// https://androidtunado.com.br/hotspot-shield-vpn-premium-apk/  vpn
-// https://androidtunado.com.br/telegram-premium-apk/ telegram 
+//   vpn
+//  telegram 
 // https://androidtunado.com.br/spowlo-apk/  spowlo musica
 // https://androidtunado.com.br/malwarebytes-premium-apk/  antimaware 
 // https://fir3.net/2ht9 IA 
-// https://fir3.net/QuVd youtube music premium
-// https://clica.so/5cdw  spotfy
+//  youtube music premium
+//  spotfy
     </script>
 </body>
 </html>
