--- a/functionsTestes.html
+++ b/functionsTestes.html
@@ -10,8 +10,8 @@
    <script src="functestes.js"></script>
    <script src="functestes2.js"></script>// sempre vai se sobre sair
    <script>
-    console.log(initTest)
-    unit()
+    console.log(init)
+    //unit()
    </script>
 </body>
 </html>
