--- a/roadMap-from-Developer/funtion02/index05.html
+++ b/roadMap-from-Developer/funtion02/index05.html
@@ -1,1 +1,26 @@
-!
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <Script>z
+        // argumens, são como arrays, se porta mas nao é
+
+function somar() {
+    console.log(arguments)
+    let soma = 0 
+    for(let i = 0; i < arguments.length ; i++){
+         soma+= arguments[i]
+    }
+    return soma
+  }
+
+  console.log(somar(1,2,3,4,5,6,7,8))
+
+
+    </Script>
+</body>
+</html>
