--- a/roadMap-from-Developer/funtion02/index05.html
+++ b/roadMap-from-Developer/funtion02/index05.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <Script>z
+    <Script>
         // argumens, são como arrays, se porta mas nao é
 
 function somar() {
@@ -19,7 +19,8 @@ function somar() {
   }
 
   console.log(somar(1,2,3,4,5,6,7,8))
-
+  console.log(somar(1,2,3,4,5,12,32,12,13,43,54))
+// com isso voce pode colocar quantos console.log e somar infinitos numeros que quiser.
 
     </Script>
 </body>
