--- a/func.html
+++ b/func.html
@@ -8,15 +8,11 @@
 <body>
     <script>
 
-function somar(){
-    console.log(arguments)
-    let total = 0
-    for(let i = 0 ; i < arguments.length; i ++){
-        total += arguments[i]
-    }
-    return total
-}
-console.log(somar(1,2,3,4,5,6,7,3,6,7,2,4,5,3,2,4,6))// 
+function soma() { 
+    let num = 1 
+    return num 
+ }
+console.log(soma.n)
 
     </script>
 </body>
