--- a/func.html
+++ b/func.html
@@ -8,15 +8,16 @@
 <body>
     <script>
 
-function somar(){
-    console.log(arguments)
-    let total = 0
-    for(let i = 0 ; i < arguments.length; i ++){
-        total += arguments[i]
-    }
-    return total
+
+function nf(cb){
+    let ne = 10 
+    console.log(typeof cb)
+    nf()
 }
-console.log(somar(1,2,3,4,5,6,7,3,6,7,2,4,5,3,2,4,6))// 
+
+nf(function(){
+    console.log('funcão chamada de call back')
+})
 
     </script>
 </body>
