--- a/javas-training1.html
+++ b/javas-training1.html
@@ -6,12 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <h2 id="title1">Meu codigo</h2>
-    </main>
+    <p id="t">paragrafo</p>
     <script>
-
-
+        
     </script>
 </body>
 </html>
