--- a/roadmap-telegram/dom/dom05.html
+++ b/roadmap-telegram/dom/dom05.html
@@ -11,11 +11,15 @@
 
 <form action="#">
 <input type="text" name="text01" id="texto1" placeholder="name"><br>
-<input type="text" name="text02" id="texto2" placeholder="nome">
+<input type="text" name="text02" id="texto2" placeholder="nome"> <!--  se colocarmos o 'readonly' dps do placeholder, vai desabilitar o campo de preenchimento -->
 
 </form>
     <script>
-
+      let text01 = window.document.querySelector('#texto1')
+      let text02 = window.document.querySelector('#texto2')
+      text01.ariaValueText = 'denner'
+      console.log(text01.value)
+      text01.ariaDisabled = true
     </script>
 </body>
 </html>
