--- a/roadmap-telegram/array/array04.html
+++ b/roadmap-telegram/array/array04.html
@@ -12,7 +12,9 @@ let num = [3,4,5,6,7,4,5,6,7,45,5]
 
 console.log( num.lastIndexOf(5)) // retorar a posição do ultimo elemento do array 
 
+// para verificar se um indice de um array é verdadeiro ou falso 
 
+console.log( num.includes(22222)) // false, o 22222 não existe dentro do meu array 
 
     </script>
 </body>
