--- a/roadmap-telegram/array/array07.html
+++ b/roadmap-telegram/array/array07.html
@@ -7,17 +7,15 @@
 </head>
 <body>
     <script>
-   function b(n1){
-            return function(n2){
-                return n1 + n2
-            }
-        }
+let arr = [1,2,3,4,5,6,7,8]
 
-        let num1 = b(20)
-        let num2 = num1(15)
-        let soma = num2
+console.log(arr.findIndex(function(el){
+    return el > 3
+}))
 
-        alert(soma)
+//4 , esse retorna apenas a posição do elemento que é maior que o valor que voce optou por mostrar maior. 
+
+
     </script>
 </body>
 </html>
