--- a/roadmap-telegram/array/array17.html
+++ b/roadmap-telegram/array/array17.html
@@ -9,10 +9,12 @@
     <script>
 
 
-let arr1 = new Array(1,2,3)
+let arr1 = new Array(3)// aqui no caso com numeros, vai criar um array com 3 casas, length 3
+console.log(arr1.length) // 3 
 
-let arr2 = Array.of(arr1)
+let arr2 = Array.of(3)// aqui apenas esta criando uma casa com o numero 3 
 
+console.log(arr2.length) // 1, 1 de uma casa com o numero 3
 
 
 
