--- a/gg.html
+++ b/gg.html
@@ -6,35 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste DOM</h1>
-
-<div id="countainer">
-  <p>tst1</p>
-  <p> <a href="#"></a>tst2</p>
-  <p>tst3</p>
-
-  <h2>lista1</h2>
-   <ul>
-    <li>item1</li>
-    <li>item2<ul>
-        <li>item3
-            <ul>
-               <li>item1.a</li>
-                <li>item2.b</li>
-            </ul>
-        </li>
-        
-    </ul></li>
-   </ul>
-
+    <h1>DOM</h1>
+<div>
+  <h2>
+    <ul>
+        <p>uma lista</p>
+            <li>2222222</li>
+        </ul>
+ </h2>
 </div>
+  
 
-    <script>
-   console.log(document.body)
-   console.log(document.body.nextSibling)
-   console.log(document.body.nextElementSibling)
 
-   console.log(document.body.nextSibling === document.body.nextElementSibling) //tru
-    </script>
+<script>
+console.log(document.body)
+console.log(document.body.nextElementSibling)
+console.log(document.body.nextSibling)
+
+console.log( document.body.nextElementSibling === document.body.nextSibling)
+
+
+let h1 = document.querySelector('h1')
+
+console.log(h1.nextElementSibling)
+
+</script>
 </body>
 </html>
