--- a/gg.html
+++ b/gg.html
@@ -26,7 +26,7 @@ console.log(document.body.nextSibling)
 console.log( document.body.nextElementSibling === document.body.nextSibling)
 
 
-let h1 = document.querySelector('h')
+let h1 = document.querySelector('h1')
 
 console.log(h1.nextElementSibling)
 
