--- a/roadmap-telegram/dom/dom07.html
+++ b/roadmap-telegram/dom/dom07.html
@@ -29,7 +29,7 @@ console.log(uls.parentElement.lastElementChild) // vai mostrar qual elemento <li
 console.log(uls.parentElement.hasChildNodes()) // vai verificar se tem alguma coisa dentro do elemento buscado e vai mostrar true ou false  
 
 
-console.log(uls.lastElementChild.childNodes[1])// da para navegar entres os elementos usando [] como array
+console.log(uls.lastElementChild.childNodes)// da para navegar entres os elementos usando [] como array
 
 
 
