--- a/gg.html
+++ b/gg.html
@@ -6,30 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>DOM</h1>
-<div>
-  <h2>
-    <ul>
-        <p>uma lista</p>
-            <li>2222222</li>
-        </ul>
- </h2>
-</div>
-  
-
 
 <script>
-console.log(document.body)
-console.log(document.body.nextElementSibling)
-console.log(document.body.nextSibling)
 
-console.log( document.body.nextElementSibling === document.body.nextSibling)
+const h11 = window.document.createElement("h1")
+const t = window.document.createAttribute("div")
+t.value = 'oi'
 
-
-let h1 = document.querySelector('h1')
-
-console.log(h1.nextElementSibling)
-
+console.log(t)
+console.log(h11)
 </script>
 </body>
 </html>
