--- a/tst.html
+++ b/tst.html
@@ -6,39 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste DOM</h1>
-    <h2>
-        <ul id="testt" >
-            <a href="#"> link falso xD</a>
-            <li>TESTES </li>
-            <li>TESTES </li>
-            <li>TESTES </li>
-        </ul>
-    </h2>
-
-
-
-
  <script>
 
 
-console.log(document.body)
-console.log(document.body.nextElementSibling)
-console.log(document.body.nextSibling)
 
-console.log(document.body.nextElementSibling === document.body.nextSibling)
+let h1  =  window.document.createElement("h1")
 
+let atritubuindo_ = window.document.createAttribute("div")
 
+atritubuindo_.value = 'msg'
 
-let ids = window.document.getElementById('testt')
+h1.innerHTML = 'Olá mundo'
 
-
-console.log(ids.nextSibling)// #text
-console.log(ids.childNodes) // vai msotrar uma nodelist 
-console.log(ids.children) // vai mostrar a coleção HTML, a partir do elemento buscado no caso o elemento ul pra frente 
-console.log(ids.hasChildNodes())
-
-
+console.log(h1)
+console.log(atritubuindo_)
 
  </script>
 </body>
