--- a/tst.html
+++ b/tst.html
@@ -10,16 +10,20 @@
 
 
 
-let h1  =  window.document.createElement("h1")
+let h1 = window.document.createElement("h1")
 
-let atritubuindo_ = window.document.createAttribute("div")
 
-atritubuindo_.value = 'msg'
+let tributo_ = window.document.createAttribute("div")
 
-h1.innerHTML = 'Olá mundo'
+tributo_.value ='msg'
+h1.innerHTML ='olá mundo'
+
 
 console.log(h1)
-console.log(atritubuindo_)
+console.log(tributo_)
+
+
+
 
  </script>
 </body>
