--- a/gg.html
+++ b/gg.html
@@ -13,7 +13,7 @@ const h11 = window.document.createElement("h1")
 const t = window.document.createAttribute("div")
 t.value = 'oi'
 
-console.log(t
+console.log(t)
 console.log(h11)
 </script>
 </body>
