--- a/roadmap-telegram/dom/dom09.html
+++ b/roadmap-telegram/dom/dom09.html
@@ -16,7 +16,7 @@ h1.setAttribute("titulo", "titulo inside")
 h1.setAttribute("style", "color:red;")
 
 h1.textContent = ' olá mundo '
-console.log(h1)
+console.log(h1
     </script>
 </body>
 </html>
