--- a/tst.html
+++ b/tst.html
@@ -6,40 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste DOM</h1>
-    <h2>
-        <ul id="testt" >
-            <a href="#"> link falso xD</a>
-            <li>TESTES </li>
-            <li>TESTES </li>
-            <li>TESTES </li>
-        </ul>
-    </h2>
+    <script>
+let h1 = window.document.createElement("h1")
+
+let at = window.document.createAttribute("div")
 
 
+at.value = 'msg'
 
+let txt = window.document.createTextNode('o')
 
- <script>
+h1.appendChild(txt)
 
+h1.setAttribute("mundo","atribuindo")
 
-console.log(document.body)
-console.log(document.body.nextElementSibling)
-console.log(document.body.nextSibling)
+console.log(h1)
 
-console.log(document.body.nextElementSibling === document.body.nextSibling)
-
-
-
-let ids = window.document.getElementById('testt')
-
-
-console.log(ids.nextSibling)// #text
-console.log(ids.childNodes) // vai msotrar uma nodelist 
-console.log(ids.children) // vai mostrar a coleção HTML, a partir do elemento buscado no caso o elemento ul pra frente 
-console.log(ids.hasChildNodes())
-
-
-
- </script>
+    </script>
 </body>
 </html>
