--- a/tst.html
+++ b/tst.html
@@ -18,7 +18,7 @@ let txt = window.document.createTextNode('o')
 
 h1.appendChild(txt)
 
-h1.setAttribute("mundo","atribuindo")
+h1.setAttribute("mundo","atribuindo"
 
 console.log(h1)
 
