--- a/tst.html
+++ b/tst.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="msg"></div>
+    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut reiciendis dolorum soluta ad beatae atque temporibus, architecto nesciunt. Porro sequi dicta commodi, exercitationem corrupti eveniet quod quam? Nulla, ea est.</p>
+    <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ducimus fugit cumque adipisci at, nobis rerum atque laudantium praesentium, repudiandae reprehenderit, voluptatum quasi odio eaque aspernatur possimus numquam labore beatae.</p>
+
+    <script>
+
+
+let inset_P =  window.document.querySelector("#msg")
+inset_P.after("olá mundo eu estou após a div")
+
+let insert_P1 = window.document.querySelector(".p1")
+insert_P1.after("estou apoós o primeiro paragrafo")
+
+let insert_P2 = window.document.querySelector(".p2")
+insert_P2.after("estou após o segundo paragrafo"
+
+    </script>
 </body>
 </html>
