--- a/tst.html
+++ b/tst.html
@@ -20,7 +20,7 @@ let insert_P1 = window.document.querySelector(".p1")
 insert_P1.after("estou apoós o primeiro paragrafo")
 
 let insert_P2 = window.document.querySelector(".p2")
-insert_P2.after("estou após o segundo paragrafo"
+insert_P2.after("estou após o segundo paragrafo")
 
     </script>
 </body>
