--- a/gg.html
+++ b/gg.html
@@ -6,33 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-
-
-<div id="msg">
-    <ul>
-        <li>listas 01</li>
-        <li>listas 02</li>
-        <ul>
-            <li>listas 01 b</li>
-            <li>listas 02 b</li>
-            <li>listas 03 b</li>
-            <li>listas 04 b</li>
-        </ul>
-    </ul>
-</div>
-
-
-
+    <div class="n11">
+        <p>n1</p>
+        <p>n2</p>
+        <p>n3</p>
+    </div>
     <script>
-
-let h1 = window.document.createElement("h1")
-
-h1.textContent = 'olá mundo'
-
-let level = window.document.querySelector("ul ul")
-
-level = level.cloneNode(true)
-
 
 
 
