--- a/roadmap-telegram/eventos/eventos01.html
+++ b/roadmap-telegram/eventos/eventos01.html
@@ -6,16 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">clique aqui!</button>
-    <script>
-let btn = window.document.getElementById("btn")
+    <button id="btn">clicou1</button>
 
+    <script>
+let btn = window.document.querySelector("#btn")
 
 function clicou() {
-    console.log('clicou no botão')
+    console.log("cliquei")
   }
 
 btn.addEventListener("click", clicou)
+
 
     </script>
 </body>
