--- a/gg.html
+++ b/gg.html
@@ -14,7 +14,7 @@ function clicar() {
     alert('clicando')
   }
 
-  btn.addEventListener("click", clicar)
+  btn.addEventListener("click", clicar
 
   
     </script>
